# sbc_code

./: CHANGES.md  README.md
quartz64/: Makefile  README.md  (+1 more)
software/containers/telescope_api/tart_api/: .dockerignore  README.md  docker-compose.yml  pyproject.toml  run_dev.py
software/containers/telescope_api/tart_api/app/: config.py  dependencies.py  main.py
software/containers/telescope_api/tart_api/app/middleware/: client_cache_middleware.py
software/containers/telescope_api/tart_api/app/routers/: __init__.py  acquisition.py  auth.py  calibration.py  imaging.py  info.py  operation.py  status.py
software/containers/telescope_api/tart_api/database/: connection.py  operations.py
software/containers/telescope_api/tart_api/generated_models/: __init__.py  acquisition_models.py  auth_models.py  calibration_models.py  channel_models.py  common_models.py  data_models.py  fpga_models.py  imaging_models.py  info_models.py  operation_models.py  status_models.py  telescope_models.py
software/containers/telescope_api/tart_api/services/: __init__.py  tart_control.py  telescope_control.py
software/containers/telescope_web_api/python_code/tart_web_api/: Dockerfile.generate  FASTAPI_MIGRATION.md  README.md  gen.sh  generate_models.py  pyproject.toml  schema_plan.md  setup.py
software/containers/telescope_web_api/python_code/tart_web_api/generated_models/: acquisition_models.py  auth_models.py  calibration_models.py  channel_models.py  common_models.py  data_models.py  fpga_models.py  imaging_models.py  info_models.py  operation_models.py  status_models.py  telescope_models.py
software/containers/telescope_web_api/python_code/tart_web_api/schemas/: acquisition.json  channel.json  operation.json  status.json
software/containers/telescope_web_api/python_code/tart_web_api/schemas/models/: channel.json  fpga.json  telescope.json
software/containers/telescope_web_api/python_code/tart_web_api/tart_api/: Dockerfile  README.md  __init__.py  models  pyproject.toml  test_all_endpoints.py  test_results.json  test_validation.py
software/containers/telescope_web_api/python_code/tart_web_api/tart_api/app/: __init__.py  config.py  dependencies.py  main.py
software/containers/telescope_web_api/python_code/tart_web_api/tart_api/app/routers/: acquisition.py  auth.py  calibration.py  channel.py  data.py  imaging.py  info.py  operation.py  status.py
software/containers/telescope_web_api/python_code/tart_web_api/tart_api/database/: __init__.py  connection.py
software/containers/telescope_web_api/python_code/tart_web_api/tart_api/generated_models/: __init__.py  channel_models.py
software/containers/telescope_web_api/python_code/tart_web_api/tart_api/legacy/: __init__.py  telescope_service.py
software/containers/telescope_web_api/python_code/tart_web_api/tart_api/services/: telescope_control.py
software/containers/telescope_web_api/python_code/tart_web_api/tart_api/tests/: __init__.py  test_main.py
software/containers/telescope_web_api/python_code/tart_web_api/tart_web_api/: __init__.py  apidoc.json  app.py  config.py  database.py  main.py  service.py  views.py  views_acquisition.py  views_auth.py  views_cache.py  views_cal.py  views_channel.py  views_log.py  views_obs.py
(+126 files in other folders)
