[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tart-api"
version = "0.1.0"
description = "FastAPI-based TART API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic-settings>=2.0.0",
    "python-jose[cryptography]>=3.3.0",
    "aiosqlite>=0.19.0",
    "numpy>=1.24.0",
    "h5py>=3.14.0",
    "tart>=1.3.1",
    "requests>=2.28.0",
    "spidev>=3.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project.optional-dependencies]
dev = [
    "ruff>=0.1.0",
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.25.0",
    "matplotlib>=3.7.1"
]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "B", "UP", "C4", "T20"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.isort]
known-first-party = ["tart_api"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
