[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "tart_web_api"
version = "0.2.0b7"
description = "Transient Array Radio Telescope High-level HTTP Interface"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "Flask",
    "flask-jwt-extended",
    "flask-cli",
    "flask-cors",
    "flask-script",
    "tart_hardware_interface",
    "tart>=1.3.1",
    "requests>=2.32.4",
]
authors = [
    {name = "Tim Molteno", email = "tim@elec.ac.nz"},
    {name = "Max Scheel"},
    {name = "Pat Suggate"},
]
license = {text = "GPLv3"}

[project.urls]
Homepage = "http://github.com/tmolteno/TART"

# datamodel-codegen configuration is handled in generate_models.py

[tool.uv]
dev-dependencies = [
    "datamodel-code-generator>=0.25.0",
    "pydantic>=2.0.0",
]
